[package]
name = "rustpde"
version = "0.1.2"
authors = ["preiter <phil.reiter93@gmail.com>"]
edition = "2018"
description = "N-dimensional spectral transforms of various basis functions"

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-linalg = { version = "0.14", features = ["openblas-static"] }
enum_dispatch = "0.3.7"
num-traits = "0.2.12"
hdf5 = {path = "hdf5-rust", version = "0.7.1"}
#funspace = "0.1.0"
funspace = {path = "funspace", version = "0.1.0"}

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[lib]
name = "rustpde"
path = "src/lib.rs"

[[bench]]
name = "benchmark_transform"
harness = false

[[bench]]
name = "benchmark_diffusion"
harness = false

[[bench]]
name = "benchmark_navier"
harness = false
