[package]
name = "hdf5-interface"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdf5 = {path = "hdf5-rust", version = "0.7.1"}
ndarray = { version = "0.15" }
num-traits = "0.2.12"
num-complex = "0.4"